{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 257,
  "lineage": "a440f429-efb1-1de5-b78e-ff0fb9a9f04c",
  "resources": [
    {
      "module": "module.workload.module.azure_public_ip[\"pip-appgw-nonprod-eastus-000\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/publicIPAddresses/pip-appgw-nonprod-eastus-000",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.63.8",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-appgw-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.azure_public_ip[\"pip-bas-nonprod-eastus-000\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/publicIPAddresses/pip-bas-nonprod-eastus-000",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.63.15",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-bas-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.azure_public_ip[\"pip-firewall-nonprod-eastus-000\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/publicIPAddresses/pip-firewall-nonprod-eastus-000",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.62.213",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-firewall-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.firewall.module.azure_firewall_policy",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "firewall_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [
              {
                "network_rule_fqdn_enabled": false,
                "proxy_enabled": true,
                "servers": []
              }
            ],
            "firewalls": [],
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/firewallPolicies/firewall-policy-nonprod-eastus-000",
            "identity": [],
            "intrusion_detection": [
              {
                "mode": "Alert",
                "signature_overrides": [],
                "traffic_bypass": []
              }
            ],
            "location": "eastus",
            "name": "firewall-policy-nonprod-eastus-000",
            "private_ip_ranges": [],
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "rule_collection_groups": [
              "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/firewallPolicies/firewall-policy-nonprod-eastus-000/ruleCollectionGroups/az-fw-apprule-nonprod-eastus-000"
            ],
            "sku": "Premium",
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.workload.module.firewall.module.azure_firewall_policy_rule_collection_group",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "policy_rule_collection_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "apprule-collection-nonprod-eastus-000",
                "priority": 500,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*"
                    ],
                    "destination_urls": [],
                    "name": "Anyapp_Pass_rule",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*"
                    ],
                    "destination_urls": [],
                    "name": "apprule-internet-outbound-nonprod-eastus-000",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "11.0.0.0/8",
                      "11.0.2.0/24",
                      "172.17.0.0/16",
                      "172.28.0.0/20",
                      "20.88.188.118"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": null,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/firewallPolicies/firewall-policy-nonprod-eastus-000",
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/firewallPolicies/firewall-policy-nonprod-eastus-000/ruleCollectionGroups/az-fw-apprule-nonprod-eastus-000",
            "name": "az-fw-apprule-nonprod-eastus-000",
            "nat_rule_collection": [
              {
                "action": "Dnat",
                "name": "dnat-hub-nonprod-eastus-000",
                "priority": 100,
                "rule": [
                  {
                    "destination_address": "20.232.62.213",
                    "destination_ports": [
                      "15021"
                    ],
                    "name": "dntrule15021-hub-nonprod-eastus-004",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "20.88.188.118",
                    "translated_port": 15021
                  },
                  {
                    "destination_address": "20.232.62.213",
                    "destination_ports": [
                      "15443"
                    ],
                    "name": "dntrule15443-hub-nonprod-eastus-006",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "20.88.188.118",
                    "translated_port": 15443
                  },
                  {
                    "destination_address": "20.232.62.213",
                    "destination_ports": [
                      "22"
                    ],
                    "name": "dntrulesftp22-hub-nonprod-eastus-003",
                    "protocols": [
                      "TCP",
                      "UDP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "20.88.188.118",
                    "translated_port": 22
                  },
                  {
                    "destination_address": "20.232.62.213",
                    "destination_ports": [
                      "31400"
                    ],
                    "name": "dntrule31400-hub-nonprod-eastus-005",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "20.88.188.118",
                    "translated_port": 31400
                  },
                  {
                    "destination_address": "20.232.62.213",
                    "destination_ports": [
                      "443"
                    ],
                    "name": "dntrule443-hub-nonprod-eastus-002",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "20.88.188.118",
                    "translated_port": 443
                  },
                  {
                    "destination_address": "20.232.62.213",
                    "destination_ports": [
                      "80"
                    ],
                    "name": "dntrule80-hub-nonprod-eastus-000",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "20.88.188.118",
                    "translated_port": 80
                  }
                ]
              }
            ],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "network-rule-collection-nonprod-eastus-000",
                "priority": 200,
                "rule": [
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "network-rule-hub-outbound-nonprod-eastus-000",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [
                      "172.28.0.0/20"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "network-rule-spoke-outbound-nonprod-eastus-000",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [
                      "11.0.0.0/8",
                      "11.0.2.0/24",
                      "172.17.0.0/16",
                      "192.168.0.0/20",
                      "20.88.188.118"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 500,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workload.module.firewall.module.azure_firewall.azurerm_firewall.firewall",
            "module.workload.module.firewall.module.azure_firewall_policy.azurerm_firewall_policy.firewall_policy"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.network.module.network_peering[\"vnet-hub-nonprod-eastus-000_to_myVnetS1\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "network_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/virtualNetworkPeerings/vnet-hub-nonprod-eastus-000_to_myVnetS1",
            "name": "vnet-hub-nonprod-eastus-000_to_myVnetS1",
            "remote_virtual_network_id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/Assurant-Dev-stndrd/providers/Microsoft.Network/virtualNetworks/myVnetS1",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub-nonprod-eastus-000"
          },
          "dependencies": [
            "module.workload.module.network.module.subnet.azurerm_subnet.subnet",
            "module.workload.module.network.module.virtual_network.azurerm_virtual_network.virtual_network",
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.network.module.subnet[\"AzureBastionSubnet\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.28.0.0/26",
            "address_prefixes": [
              "172.28.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "virtual_network_name": "vnet-hub-nonprod-eastus-000"
          },
          "dependencies": [
            "module.workload.module.network.module.virtual_network.azurerm_virtual_network.virtual_network",
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.network.module.subnet[\"AzureFirewallSubnet\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.28.0.64/26",
            "address_prefixes": [
              "172.28.0.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "virtual_network_name": "vnet-hub-nonprod-eastus-000"
          },
          "dependencies": [
            "module.workload.module.network.module.virtual_network.azurerm_virtual_network.virtual_network",
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.network.module.subnet[\"snet-apimgmt-nonprod-eastus-000\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.28.1.0/24",
            "address_prefixes": [
              "172.28.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-apimgmt-nonprod-eastus-000",
            "name": "snet-apimgmt-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "virtual_network_name": "vnet-hub-nonprod-eastus-000"
          },
          "dependencies": [
            "module.workload.module.network.module.virtual_network.azurerm_virtual_network.virtual_network",
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.network.module.subnet[\"snet-apimgnt-nonprod-eastus-000\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.28.7.0/24",
            "address_prefixes": [
              "172.28.7.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-apimgnt-nonprod-eastus-000",
            "name": "snet-apimgnt-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "virtual_network_name": "vnet-hub-nonprod-eastus-000"
          },
          "dependencies": [
            "module.workload.module.network.module.virtual_network.azurerm_virtual_network.virtual_network",
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.network.module.subnet[\"snet-appgateway-nonprod-eastus-000\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.28.8.0/24",
            "address_prefixes": [
              "172.28.8.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-appgateway-nonprod-eastus-000",
            "name": "snet-appgateway-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "virtual_network_name": "vnet-hub-nonprod-eastus-000"
          },
          "dependencies": [
            "module.workload.module.network.module.virtual_network.azurerm_virtual_network.virtual_network",
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.network.module.subnet[\"snet-azurebastion-nonprod-eastus-000\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.28.9.0/24",
            "address_prefixes": [
              "172.28.9.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-azurebastion-nonprod-eastus-000",
            "name": "snet-azurebastion-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "virtual_network_name": "vnet-hub-nonprod-eastus-000"
          },
          "dependencies": [
            "module.workload.module.network.module.virtual_network.azurerm_virtual_network.virtual_network",
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.network.module.subnet[\"snet-azurefirewall-nonprod-eastus-000\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.28.10.0/24",
            "address_prefixes": [
              "172.28.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-azurefirewall-nonprod-eastus-000",
            "name": "snet-azurefirewall-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "virtual_network_name": "vnet-hub-nonprod-eastus-000"
          },
          "dependencies": [
            "module.workload.module.network.module.virtual_network.azurerm_virtual_network.virtual_network",
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.network.module.subnet[\"snet-mgmtservers-nonprod-eastus-000\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.28.6.0/24",
            "address_prefixes": [
              "172.28.6.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-mgmtservers-nonprod-eastus-000",
            "name": "snet-mgmtservers-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "virtual_network_name": "vnet-hub-nonprod-eastus-000"
          },
          "dependencies": [
            "module.workload.module.network.module.virtual_network.azurerm_virtual_network.virtual_network",
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.network.module.virtual_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.28.0.0/20"
            ],
            "guid": "c8428c81-d966-4af7-b981-f468036f8773",
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000",
            "location": "eastus",
            "name": "vnet-hub-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "subnet": [
              {
                "address_prefix": "172.28.0.0/26",
                "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "172.28.0.64/26",
                "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "172.28.1.0/24",
                "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-apimgmt-nonprod-eastus-000",
                "name": "snet-apimgmt-nonprod-eastus-000"
              },
              {
                "address_prefix": "172.28.10.0/24",
                "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-azurefirewall-nonprod-eastus-000",
                "name": "snet-azurefirewall-nonprod-eastus-000"
              },
              {
                "address_prefix": "172.28.6.0/24",
                "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-mgmtservers-nonprod-eastus-000",
                "name": "snet-mgmtservers-nonprod-eastus-000"
              },
              {
                "address_prefix": "172.28.7.0/24",
                "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-apimgnt-nonprod-eastus-000",
                "name": "snet-apimgnt-nonprod-eastus-000"
              },
              {
                "address_prefix": "172.28.8.0/24",
                "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-appgateway-nonprod-eastus-000",
                "name": "snet-appgateway-nonprod-eastus-000"
              },
              {
                "address_prefix": "172.28.9.0/24",
                "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/virtualNetworks/vnet-hub-nonprod-eastus-000/subnets/snet-azurebastion-nonprod-eastus-000",
                "name": "snet-azurebastion-nonprod-eastus-000"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.workload.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.workload.module.route_table",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "rfc1918-10.0.0.0-aks2firewall-nonprod-eastus-000",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/routeTables/rt-aks-nonprod-eastus-000",
            "location": "eastus",
            "name": "rt-aks-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "route": [
              {
                "address_prefix": "10.0.0.0/8",
                "name": "rfc1918-10.0.0.0-aks2firewall-nonprod-eastus-000",
                "next_hop_in_ip_address": "20.232.62.213",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "rfc1918-172.16.0.0-aks2firewall-nonprod-eastus-000",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/routeTables/rt-aks-nonprod-eastus-000",
            "location": "eastus",
            "name": "rt-aks-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt-aks2firewall-nonprod-eastus-000",
                "next_hop_in_ip_address": "20.232.62.213",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "rfc1918-192.168.0.0-aks2firewall-nonprod-eastus-000",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/routeTables/rt-aks-nonprod-eastus-000",
            "location": "eastus",
            "name": "rt-aks-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "route": [
              {
                "address_prefix": "192.168.0.0/16",
                "name": "rfc1918-192.168.0.0-aks2firewall-nonprod-eastus-000",
                "next_hop_in_ip_address": "20.232.62.213",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "rt-aks2firewall-nonprod-eastus-000",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/3810f594-f91b-404a-b6eb-ebf9b9e4f62c/resourceGroups/rg-hub-nonprod-eastus-000/providers/Microsoft.Network/routeTables/rt-aks-nonprod-eastus-000",
            "location": "eastus",
            "name": "rt-aks-nonprod-eastus-000",
            "resource_group_name": "rg-hub-nonprod-eastus-000",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt-aks2firewall-nonprod-eastus-000",
                "next_hop_in_ip_address": "20.232.62.213",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}